<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toolbarBackground"
                app:title="Dashboard">
                <!--            <ImageView-->
                <!--                android:layout_gravity="center"-->
                <!--                android:layout_width="50dp"-->
                <!--                android:layout_height="50dp"-->
                <!--                android:src="@drawable/dashboard_logo"-->
                <!--                android:id="@+id/imglogo"/>-->
            </androidx.appcompat.widget.Toolbar>

<!--            <include-->
<!--                layout="@layout/activity_dashboard"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent" />-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="70dp"
                        android:contentDescription="@string/al_jadi_logo"
                        app:srcCompat="@drawable/logo2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView

                            android:id="@+id/cardPresent"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:elevation="5dp"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center"
                            android:onClick="presentCardView"
                            android:orientation="vertical"
                            app:cardElevation="5dp"
                            tools:ignore="UsingOnClickInXml">

                            <RelativeLayout

                                android:id="@+id/layout1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RelativeLayout

                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/white_circle">

                                    <ProgressBar

                                        android:id="@+id/presentPB"
                                        android:layout_width="40dp"
                                        android:layout_height="40dp"
                                        android:indeterminate="true"
                                        android:indeterminateDrawable="@drawable/white_circle"
                                        tools:ignore="TooDeepLayout" />

                                </RelativeLayout>

                                <TextView
                                    android:id="@+id/tvPresent"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:text=""
                                    android:textSize="30sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tvPresent"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:text="@string/present"
                                    android:textSize="20sp"
                                    android:textStyle="normal" />


                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardAbsent"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:elevation="5dp"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center"
                            android:onClick="absentCardView"
                            android:orientation="vertical"
                            app:cardElevation="5dp"
                            tools:ignore="UsingOnClickInXml">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RelativeLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/white_circle">

                                    <ProgressBar

                                        android:id="@+id/absentPB"
                                        android:layout_width="40dp"
                                        android:layout_height="40dp"
                                        android:indeterminate="true"
                                        android:indeterminateDrawable="@drawable/white_circle"></ProgressBar>

                                </RelativeLayout>

                                <TextView
                                    android:id="@+id/tvAbsent"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:text=""
                                    android:textSize="30sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tvAbsent"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:text="@string/absent"
                                    android:textSize="20sp"
                                    android:textStyle="normal" />

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardPending"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:elevation="5dp"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center"
                            android:onClick="pendingCardView"
                            android:orientation="vertical"
                            app:cardElevation="5dp"
                            tools:ignore="UsingOnClickInXml">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RelativeLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/white_circle">

                                    <ProgressBar

                                        android:id="@+id/pendingPB"
                                        android:layout_width="40dp"
                                        android:layout_height="40dp"
                                        android:indeterminate="true"
                                        android:indeterminateDrawable="@drawable/white_circle" />

                                </RelativeLayout>

                                <TextView
                                    android:id="@+id/tvPending"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:text=""
                                    android:textSize="30sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tvPending"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:text="@string/pending"
                                    android:textSize="20sp"
                                    android:textStyle="normal" />


                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardLeavesToday"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:elevation="5dp"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center"
                            android:onClick="leavesTodayCardView"
                            android:orientation="vertical"
                            app:cardElevation="5dp"
                            tools:ignore="UsingOnClickInXml">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RelativeLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/white_circle">

                                    <ProgressBar

                                        android:id="@+id/onLeavesPB"
                                        android:layout_width="40dp"
                                        android:layout_height="40dp"
                                        android:indeterminate="true"
                                        android:indeterminateDrawable="@drawable/white_circle" />

                                </RelativeLayout>

                                <TextView
                                    android:id="@+id/tvTodayLeaves"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:text=""
                                    android:textSize="30sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tvTodayLeaves"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:text="@string/leaves_today"
                                    android:textSize="20sp"
                                    android:textStyle="normal" />


                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>

        </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/icon_menu" />
</androidx.drawerlayout.widget.DrawerLayout>